ci-operator/step-registry/gather: Move out of IPI subdirectory
These gather steps require a kubeconfig and use the Kubernetes API to
gather information about the cluster.  They have nothing IPI-specific
and can be used to gather from UPI or other clusters as well.  Put
them in a more generic location to make that more clear.

--- a/ci-operator/step-registry/ipi/deprovision/ipi-deprovision-chain.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/ipi-deprovision-chain.yaml
@@ -1,7 +1,7 @@
 chain:
   as: ipi-deprovision
   steps:
-  - chain: ipi-deprovision-artifacts
+  - chain: gather
   - ref: ipi-deprovision-deprovision
   documentation: |-
     The IPI deprovision step chain contains all the individual steps necessary to deprovision an OpenShift cluster.
