add mising config

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2444,6 +2444,8 @@ plugins:
   - approve
   openshift/splunk-forwarder-operator:
   - approve
+  openshift/static-config-operator:
+  - approve
   openshift/tektoncd-catalog:
   - approve
   openshift/tektoncd-cli:
