--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -537,6 +537,8 @@ periodics:
       - --ignore-repo=ci-operator/jobs/openshift/sig-storage-local-static-provisioner
       - --ignore-repo=ci-operator/config/openshift/oauth-apiserver
       - --ignore-repo=ci-operator/jobs/openshift/oauth-apiserver
+      - --ignore-repo=ci-operator/config/openshift/build-machinery-go
+      - --ignore-repo=ci-operator/jobs/openshift/build-machinery-go
       image: registry.svc.ci.openshift.org/ci/autoowners:latest
       imagePullPolicy: Always
       name: "autoowners"
