--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1105,6 +1105,7 @@ tide:
     - do-not-merge/invalid-owners-file
     - bugzilla/invalid-bug
     repos:
+    - openshift/build-machinery-go
     - openshift/tektoncd-pipeline
     - openshift/tektoncd-cli
     - openshift/tektoncd-pipeline-operator
