--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2047,6 +2047,8 @@ plugins:
   - approve
   openshift/baremetal-runtimecfg:
   - approve
+  openshift/build-machinery-go:
+  - approve
   openshift/builder:
   - approve
   openshift/certman-operator:
