--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -436,6 +436,7 @@ tide:
     openshift/knative-serving: squash
     openshift/odo: squash
     openshift/odo-init-image: squash
+    openshift/static-config-operator: squash
     openshift/template-service-broker-operator: squash
     redhat-developer/openshift-jenkins-operator: rebase
     redhat-developer/service-binding-operator: squash
