--- a/ci-operator/jobs/openshift/cincinnati/openshift-cincinnati-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cincinnati/openshift-cincinnati-master-presubmits.yaml
@@ -75,6 +75,8 @@ presubmits:
           value: e2e
         - name: TEST_COMMAND
           value: bash hack/e2e.sh
+        - name: TEST_IMAGESTREAM_TAG
+          value: pipeline:e2e-test
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -86,7 +88,7 @@ presubmits:
           name: cluster-profile
         - mountPath: /usr/local/e2e
           name: job-definition
-          subPath: cluster-launch-installer-src.yaml
+          subPath: cluster-launch-installer-custom-test-image.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
@@ -98,7 +100,7 @@ presubmits:
           - secret:
               name: cluster-secrets-aws
       - configMap:
-          name: prow-job-cluster-launch-installer-src
+          name: prow-job-cluster-launch-installer-custom-test-image
         name: job-definition
       - name: sentry-dsn
         secret:
