Give more resources to origin's artifacts-build
https://bugzilla.redhat.com/show_bug.cgi?id=1784163#c18

--- a/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
@@ -5,6 +5,7 @@ presubmits:
     branches:
     - master
     context: ci/prow/artifacts
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     decorate: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
