--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -144,6 +144,8 @@ bugzilla:
       - status: ASSIGNED
       - status: ON_DEV
       - status: POST
+    fcos:
+      validate_by_default: false
     master:
       add_external_link: true
       exclude_defaults: true
