Add new port for updating local dns entries

--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -29,6 +29,9 @@ items:
     - name: ost-swift
       port: 8080
       targetPort: ost-swift
+    - name: local-dns
+      port: 8088
+      targetPort: local-dns
     - name: ost-glance
       port: 9292
       targetPort: ost-glance
@@ -80,6 +83,8 @@ items:
               containerPort: 6666
             - name: ost-swift
               containerPort: 7777
+            - name: local-dns
+              containerPort: 10000
             - name: ost-glance
               containerPort: 8888
             - name: ost-neutron
