--- a/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: prow-monitoring
 spec:
   groups:
-  - name: build-cop-target-stable-low
+  - name: build-cop-target-oldstable-low
     rules:
     - alert: release-.*-4.1-low
       annotations:
@@ -16,7 +16,7 @@ spec:
           | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
           and <https://prow.svc.ci.openshift.org/?job=release-*-4.1|deck-portal>.'
       expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state="success"}[2d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state=~"success|failure"}[2d])) * 100 < 80
       for: 10m
       labels:
         severity: critical
@@ -27,7 +27,7 @@ spec:
           | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
           and <https://prow.svc.ci.openshift.org/?job=release-*-4.2|deck-portal>.'
       expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state="success"}[2d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state=~"success|failure"}[2d])) * 100 < 80
       for: 10m
       labels:
         severity: critical
@@ -38,7 +38,31 @@ spec:
           {{ $value | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
           and <https://prow.svc.ci.openshift.org/?job=release-*4.1*4.2*|deck-portal>.'
       expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state="success"}[2d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state=~"success|failure"}[2d])) * 100 < 80
+      for: 10m
+      labels:
+        severity: critical
+        team: build-cop
+  - name: build-cop-target-stable-low
+    rules:
+    - alert: release-.*-4.3-low
+      annotations:
+        message: '@build-cop `release-.*-4.3` jobs are passing at a rate of {{ $value
+          | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
+          and <https://prow.svc.ci.openshift.org/?job=release-*-4.3|deck-portal>.'
+      expr: |
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.3",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.3",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
+      for: 10m
+      labels:
+        severity: critical
+        team: build-cop
+    - alert: release-.*4.2.*4.3.*-low
+      annotations:
+        message: '@build-cop `release-.*4.2.*4.3.*` jobs are passing at a rate of
+          {{ $value | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
+          and <https://prow.svc.ci.openshift.org/?job=release-*4.2*4.3*|deck-portal>.'
+      expr: |
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.2.*4.3.*",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.2.*4.3.*",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
       for: 10m
       labels:
         severity: critical
@@ -56,17 +80,6 @@ spec:
       labels:
         severity: critical
         team: build-cop
-    - alert: release-.*-4.3-low
-      annotations:
-        message: '@build-cop `release-.*-4.3` jobs are passing at a rate of {{ $value
-          | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
-          and <https://prow.svc.ci.openshift.org/?job=release-*-4.3|deck-portal>.'
-      expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.3",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.3",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
-      for: 10m
-      labels:
-        severity: critical
-        team: build-cop
     - alert: release-.*-upgrade.*-low
       annotations:
         message: '@build-cop `release-.*-upgrade.*` jobs are passing at a rate of
@@ -74,17 +87,6 @@ spec:
           and <https://prow.svc.ci.openshift.org/?job=release-*-upgrade*|deck-portal>.'
       expr: |
         sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-upgrade.*",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-upgrade.*",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
-      for: 10m
-      labels:
-        severity: critical
-        team: build-cop
-    - alert: release-.*4.2.*4.3.*-low
-      annotations:
-        message: '@build-cop `release-.*4.2.*4.3.*` jobs are passing at a rate of
-          {{ $value | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
-          and <https://prow.svc.ci.openshift.org/?job=release-*4.2*4.3*|deck-portal>.'
-      expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.2.*4.3.*",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.2.*4.3.*",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
       for: 10m
       labels:
         severity: critical
