--- a/core-services/prow/03_deployment/boskos.yaml
+++ b/core-services/prow/03_deployment/boskos.yaml
@@ -139,9 +139,9 @@ objects:
   metadata:
     annotations:
       #https://docs.openshift.com/container-platform/3.11/architecture/networking/routes.html#env-variables
-      #default is 30s, acquiring lease from boskos is about 35s in our production
+      #default is 30s
       #before figuring out why it takes so long, we set this up to work it around
-      haproxy.router.openshift.io/timeout: 120s
+      haproxy.router.openshift.io/timeout: 1000s
     name: boskos
     namespace: ${namespace}
   spec:
