cluster-launch-installer-e2e: Add preserve_bootstrap variant
This will preserve the bootstrap host in order to debug issues unique to 
bootstrapping.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -731,6 +731,10 @@ objects:
         EOF
         fi
 
+        if has_variant "preserve_bootstrap"; then
+          export OPENSHIFT_INSTALL_PRESERVE_BOOTSTRAP=true
+        fi
+
         # TODO: Replace with a more concise manifest injection approach
         if [[ -n "${CLUSTER_NETWORK_MANIFEST:-}" ]]; then
             openshift-install --dir=/tmp/artifacts/installer/ create manifests
