ci/prow/ci-operator-registry: pass --prow-config
The flag was recently made mandatory (https://github.com/openshift/ci-tools/pull/421) but the job was not adjusted accordingly.

--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -145,6 +145,8 @@ presubmits:
         - --registry
         - ./ci-operator/step-registry/
         - --validate-only
+        - --prow-config
+        - ./core-services/prow/02_config/_config.yaml
         command:
         - ci-operator-configresolver
         image: ci-operator-configresolver:latest
