updated integreatly-operator olm install make target

--- a/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-presubmits.yaml
@@ -110,7 +110,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-olm
         - name: TEST_COMMAND
-          value: make test/e2e/olm
+          value: make install/olm
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
