--- a/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
+++ b/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
@@ -62,6 +62,6 @@ tests:
   openshift_installer_src:
     cluster_profile: aws
 - as: e2e-olm
-  commands: make test/e2e/olm
+  commands: make install/olm
   openshift_installer_src:
     cluster_profile: aws
