Updates names in multus-whereabouts-cni & multus-route-override-cni to match those used in mirroring

--- a/ci-operator/config/openshift/route-override-cni/openshift-route-override-cni-release-4.5.yaml
+++ b/ci-operator/config/openshift/route-override-cni/openshift-route-override-cni-release-4.5.yaml
@@ -11,7 +11,7 @@ build_root:
 images:
 - dockerfile_path: Dockerfile.openshift
   from: base
-  to: route-override-cni
+  to: multus-route-override-cni
 promotion:
   name: "4.5"
   namespace: ocp
