--- a/ci-operator/config/openshift/whereabouts-cni/openshift-whereabouts-cni-master.yaml
+++ b/ci-operator/config/openshift/whereabouts-cni/openshift-whereabouts-cni-master.yaml
@@ -11,7 +11,7 @@ build_root:
 images:
 - dockerfile_path: Dockerfile.openshift
   from: base
-  to: whereabouts-cni
+  to: multus-whereabouts-ipam-cni
 promotion:
   name: "4.4"
   namespace: ocp
