--- a/ci-operator/jobs/openshift/cluster-etcd-operator/openshift-cluster-etcd-operator-release-4.5-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-etcd-operator/openshift-cluster-etcd-operator-release-4.5-presubmits.yaml
@@ -82,6 +82,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-etcd-operator-release-4.5-e2e-azure
+    optional: true
     rerun_command: /test e2e-azure
     spec:
       containers:
