--- a/ci-operator/config/integr8ly/ansible-tower-configuration/integr8ly-ansible-tower-configuration-master.yaml
+++ b/ci-operator/config/integr8ly/ansible-tower-configuration/integr8ly-ansible-tower-configuration-master.yaml
@@ -12,7 +12,7 @@ resources:
       memory: 200Mi
 tests:
 - as: e2e
-  commands: make test/e2e
+  commands: make test/e2e/prow
   secret:
     name: integr8ly-tower-secrets
     mount_path: /usr/local/integr8ly-tower-secrets
