Add new jobs for openshift/managed-cluster-validating-webhooks

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1161,6 +1161,7 @@ tide:
     - openshift/dedicated-admin-operator
     - openshift/library-go
     - openshift/managed-cluster-config
+    - openshift/managed-cluster-validating-webhooks
     - openshift/managed-prometheus-exporter-dns
     - openshift/managed-prometheus-exporter-ebs-iops-reporter
     - openshift/managed-prometheus-exporter-machine-api
