--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2314,6 +2314,8 @@ plugins:
   - approve
   openshift/managed-cluster-config:
   - approve
+  openshift/managed-cluster-validating-webhooks:
+  - approve
   openshift/managed-prometheus-exporter-dns:
   - approve
   openshift/managed-prometheus-exporter-ebs-iops-reporter:
