hack/: pass directory to scripts as explicit arg
The validation scripts in `hack/` are either assuming to be run from the
repo root, or are inferring the root from their own location using hacks
like `${BASH_SOURCE[0]}`. This makes them harder to reuse in
https://github.com/redhat-operator-ecosystem/release so I want to fix
them to use root dir explicity passed to it.

--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -294,7 +294,9 @@ presubmits:
     rerun_command: /test correctly-sharded-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-config-sharding.sh
         image: config-shard-validator:latest
         imagePullPolicy: Always
@@ -315,7 +317,9 @@ presubmits:
     rerun_command: /test generated-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-generated-config.sh
         image: ci-operator-prowgen:latest
         imagePullPolicy: Always
@@ -336,7 +340,9 @@ presubmits:
     rerun_command: /test generated-dashboards
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-generated-dashboards.sh
         image: registry.svc.ci.openshift.org/ci/dashboards-validation:latest
         imagePullPolicy: Always
@@ -357,7 +363,9 @@ presubmits:
     rerun_command: /test ordered-prow-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-prow-job-ordering.sh
         image: determinize-prow-jobs:latest
         imagePullPolicy: Always
@@ -378,7 +386,9 @@ presubmits:
     rerun_command: /test owners
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-owners.sh
         image: centos:7
         imagePullPolicy: Always
@@ -428,7 +438,9 @@ presubmits:
     rerun_command: /test prow-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-prow-config-formatting.sh
         image: determinize-prow-config:latest
         imagePullPolicy: Always
@@ -449,7 +461,9 @@ presubmits:
     rerun_command: /test prow-config-filenames
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-ci-operator-config-filename.py
         image: registry.svc.ci.openshift.org/ci/python-validation
         imagePullPolicy: Always
@@ -470,7 +484,9 @@ presubmits:
     rerun_command: /test prow-config-semantics
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-prow-job-semantics.py
         image: registry.svc.ci.openshift.org/ci/python-validation
         imagePullPolicy: Always
@@ -564,7 +580,9 @@ presubmits:
     rerun_command: /test step-registry-shellcheck
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-registry-commands.sh
         image: registry.svc.ci.openshift.org/ci/shellcheck
         imagePullPolicy: Always
