--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -286,7 +286,9 @@ presubmits:
     rerun_command: /test correctly-sharded-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-config-sharding.sh
         image: config-shard-validator:latest
         imagePullPolicy: Always
@@ -305,7 +307,9 @@ presubmits:
     rerun_command: /test generated-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-generated-config.sh
         image: ci-operator-prowgen:latest
         imagePullPolicy: Always
@@ -324,7 +328,9 @@ presubmits:
     rerun_command: /test generated-dashboards
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-generated-dashboards.sh
         image: registry.svc.ci.openshift.org/ci/dashboards-validation:latest
         imagePullPolicy: Always
@@ -343,7 +349,9 @@ presubmits:
     rerun_command: /test ordered-prow-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-prow-job-ordering.sh
         image: determinize-prow-jobs:latest
         imagePullPolicy: Always
@@ -362,7 +370,9 @@ presubmits:
     rerun_command: /test owners
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-owners.sh
         image: centos:7
         imagePullPolicy: Always
@@ -412,7 +422,9 @@ presubmits:
     rerun_command: /test prow-config
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-prow-config-formatting.sh
         image: determinize-prow-config:latest
         imagePullPolicy: Always
@@ -431,7 +443,9 @@ presubmits:
     rerun_command: /test prow-config-filenames
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-ci-operator-config-filename.py
         image: registry.svc.ci.openshift.org/ci/python-validation
         imagePullPolicy: Always
@@ -450,7 +464,9 @@ presubmits:
     rerun_command: /test prow-config-semantics
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-prow-job-semantics.py
         image: registry.svc.ci.openshift.org/ci/python-validation
         imagePullPolicy: Always
@@ -542,7 +558,9 @@ presubmits:
     rerun_command: /test step-registry-shellcheck
     spec:
       containers:
-      - command:
+      - args:
+        - ./
+        command:
         - hack/validate-registry-commands.sh
         image: registry.svc.ci.openshift.org/ci/shellcheck
         imagePullPolicy: Always
