ci-operator/step-registry/ipi/deprovision: Fix "deprivison" -> "deprovision" typos
Caught by Steve [1] and generated with:

  $ sed -i 's/deprivison/deprovision/' $(git grep -l deprivison)

[1]: https://github.com/openshift/release/pull/7021#discussion_r376001441

--- a/ci-operator/step-registry/ipi/deprovision/artifacts/artifacts/ipi-deprovision-artifacts-artifacts-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/artifacts/ipi-deprovision-artifacts-artifacts-ref.yaml
@@ -7,4 +7,4 @@ ref:
       cpu: 300m
       memory: 300Mi
   documentation: |-
-    The pre-deprivison artifacts step collects CI-specific artifacts.
+    The pre-deprovision artifacts step collects CI-specific artifacts.
