--- a/ci-operator/step-registry/ipi/deprovision/deprovision/ipi-deprovision-deprovision-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/deprovision/ipi-deprovision-deprovision-ref.yaml
@@ -7,4 +7,4 @@ ref:
       cpu: 1000m
       memory: 300Mi
   documentation: |-
-    The IPI deprivison step tears down the cluster.
+    The IPI deprovision step tears down the cluster.
