--- a/ci-operator/step-registry/ipi/deprovision/artifacts/must-gather/ipi-deprovision-artifacts-must-gather-ref.yaml
+++ b/ci-operator/step-registry/ipi/deprovision/artifacts/must-gather/ipi-deprovision-artifacts-must-gather-ref.yaml
@@ -7,4 +7,4 @@ ref:
       cpu: 300m
       memory: 300Mi
   documentation: |-
-    The pre-deprivison must-gather step runs the must-gather tool to gather artifacts.
+    The pre-deprovision must-gather step runs the must-gather tool to gather artifacts.
