--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -286,9 +286,7 @@ presubmits:
     rerun_command: /test correctly-sharded-config
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-config-sharding.sh
         image: config-shard-validator:latest
         imagePullPolicy: Always
@@ -307,9 +305,7 @@ presubmits:
     rerun_command: /test generated-config
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-generated-config.sh
         image: ci-operator-prowgen:latest
         imagePullPolicy: Always
@@ -328,9 +324,7 @@ presubmits:
     rerun_command: /test generated-dashboards
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-generated-dashboards.sh
         image: registry.svc.ci.openshift.org/ci/dashboards-validation:latest
         imagePullPolicy: Always
@@ -349,9 +343,7 @@ presubmits:
     rerun_command: /test ordered-prow-config
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-prow-job-ordering.sh
         image: determinize-prow-jobs:latest
         imagePullPolicy: Always
@@ -370,9 +362,7 @@ presubmits:
     rerun_command: /test owners
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-owners.sh
         image: centos:7
         imagePullPolicy: Always
@@ -422,9 +412,7 @@ presubmits:
     rerun_command: /test prow-config
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-prow-config-formatting.sh
         image: determinize-prow-config:latest
         imagePullPolicy: Always
@@ -443,9 +431,7 @@ presubmits:
     rerun_command: /test prow-config-filenames
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-ci-operator-config-filename.py
         image: registry.svc.ci.openshift.org/ci/python-validation
         imagePullPolicy: Always
@@ -464,9 +450,7 @@ presubmits:
     rerun_command: /test prow-config-semantics
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-prow-job-semantics.py
         image: registry.svc.ci.openshift.org/ci/python-validation
         imagePullPolicy: Always
@@ -558,9 +542,7 @@ presubmits:
     rerun_command: /test step-registry-shellcheck
     spec:
       containers:
-      - args:
-        - ./
-        command:
+      - command:
         - hack/validate-registry-commands.sh
         image: registry.svc.ci.openshift.org/ci/shellcheck
         imagePullPolicy: Always
