Rehearse all openshift/release presubmits

--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -52,6 +52,8 @@ presubmits:
     - master
     context: ci/build-farm/build01-dry
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-build01-dry
     rerun_command: /test build01-dry
     spec:
@@ -111,6 +113,8 @@ presubmits:
     - master
     context: ci/prow/ci-operator-config
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-ci-operator-config
     rerun_command: /test ci-operator-config
     spec:
@@ -195,6 +199,8 @@ presubmits:
     - master
     context: ci/prow/core-dry
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-core-dry
     rerun_command: /test core-dry
     spec:
@@ -282,6 +288,8 @@ presubmits:
     - master
     context: ci/prow/correctly-sharded-config
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-correctly-sharded-config
     rerun_command: /test correctly-sharded-config
     spec:
@@ -301,6 +309,8 @@ presubmits:
     - master
     context: ci/prow/generated-config
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-generated-config
     rerun_command: /test generated-config
     spec:
@@ -320,6 +330,8 @@ presubmits:
     - master
     context: ci/prow/generated-dashboards
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-generated-dashboards
     rerun_command: /test generated-dashboards
     spec:
@@ -339,6 +351,8 @@ presubmits:
     - master
     context: ci/prow/ordered-prow-config
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-ordered-prow-config
     rerun_command: /test ordered-prow-config
     spec:
@@ -358,6 +372,8 @@ presubmits:
     - master
     context: ci/prow/owners
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-owners
     rerun_command: /test owners
     spec:
@@ -427,6 +443,8 @@ presubmits:
     - master
     context: ci/prow/prow-config-filenames
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-prow-config-filenames
     rerun_command: /test prow-config-filenames
     spec:
@@ -446,6 +464,8 @@ presubmits:
     - master
     context: ci/prow/prow-config-semantics
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-prow-config-semantics
     rerun_command: /test prow-config-semantics
     spec:
@@ -465,6 +485,8 @@ presubmits:
     - master
     context: ci/prow/services-dry
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-master-services-dry
     rerun_command: /test services-dry
     spec:
@@ -557,6 +579,8 @@ presubmits:
     - master
     context: ci/prow/pylint
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-release-pylint
     rerun_command: /test pylint
     run_if_changed: ^hack/.*\.py$
