add an image build for ci-op-configs-mirror

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -98,6 +98,8 @@ images:
         source_path: /go/bin/determinize-ci-operator
       - destination_dir: .
         source_path: /go/bin/ci-operator-prowgen
+      - destination_dir: .
+        source_path: /go/bin/ci-op-configs-mirror
   to: auto-config-brancher
 - context_dir: images/repo-brancher/
   from: git
@@ -227,6 +229,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/ci-secret-bootstrap
   to: ci-secret-bootstrap
+- context_dir: images/ci-op-configs-mirror
+  from: centos8
+  inputs:
+    bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/ci-op-configs-mirror
+  to: ci-op-configs-mirror
 promotion:
   namespace: ci
   tag: latest
