validate-ci-operator-config-filename needs --config-dir

--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -462,7 +462,8 @@ presubmits:
     spec:
       containers:
       - args:
-        - ./
+        - --config-dir
+        - ./ci-operator/config
         command:
         - hack/validate-ci-operator-config-filename.py
         image: registry.svc.ci.openshift.org/ci/python-validation
