make feature* pattern for all orgs instead

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -369,25 +369,25 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
-    ci-operator/config/openshift/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
+    ci-operator/config/**/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
       clusters:
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
-    ci-operator/config/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+    ci-operator/config/**/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-misc-configs
+    ci-operator/config/**/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
       clusters:
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/openshift/kubernetes/*.yaml:
-      clusters:
-        default:
-        - ci
-        - ci-stg
-      name: ci-operator-misc-configs
-    ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
       clusters:
         default:
         - ci
@@ -543,18 +543,23 @@ config_updater:
         - ""
       gzip: true
       name: job-config-misc
+    ci-operator/jobs/**/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
+      clusters:
+        default:
+        - ""
+      name: job-config-misc
+    ci-operator/jobs/**/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+      clusters:
+        default:
+        - ""
+      name: job-config-misc
     ci-operator/jobs/**/infra-image-mirroring.yaml:
       clusters:
         default:
         - ""
       gzip: true
       name: job-config-misc
-    ci-operator/jobs/openshift/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
-      clusters:
-        default:
-        - ""
-      name: job-config-misc
-    ci-operator/jobs/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+    ci-operator/jobs/**/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
       clusters:
         default:
         - ""
@@ -564,11 +569,6 @@ config_updater:
         default:
         - ""
       gzip: true
-      name: job-config-misc
-    ci-operator/jobs/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
-      clusters:
-        default:
-        - ""
       name: job-config-misc
     ci-operator/jobs/operator-framework/*/*feature*.yaml:
       clusters:
