fix feature* pattern for all filename orgs

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -369,19 +369,19 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
-    ci-operator/config/**/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
+    ci-operator/config/**/cluster-logging-operator/openshift*-cluster-logging-operator-feature*.yaml:
       clusters:
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
-    ci-operator/config/**/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+    ci-operator/config/**/elasticsearch-operator/openshift*-elasticsearch-operator-feature*.yaml:
       clusters:
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
-    ci-operator/config/**/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
+    ci-operator/config/**/origin-aggregated-logging/openshift*-origin-aggregated-logging-feature*.yaml:
       clusters:
         default:
         - ci
@@ -543,12 +543,12 @@ config_updater:
         - ""
       gzip: true
       name: job-config-misc
-    ci-operator/jobs/**/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
+    ci-operator/jobs/**/cluster-logging-operator/openshift*-cluster-logging-operator-feature*.yaml:
       clusters:
         default:
         - ""
       name: job-config-misc
-    ci-operator/jobs/**/elasticsearch-operator/openshift-elasticsearch-operator-feature*.yaml:
+    ci-operator/jobs/**/elasticsearch-operator/openshift*-elasticsearch-operator-feature*.yaml:
       clusters:
         default:
         - ""
@@ -559,7 +559,7 @@ config_updater:
         - ""
       gzip: true
       name: job-config-misc
-    ci-operator/jobs/**/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
+    ci-operator/jobs/**/origin-aggregated-logging/openshift*-origin-aggregated-logging-feature*.yaml:
       clusters:
         default:
         - ""
