chore: update gc-daemonset images

--- a/projects/gc-daemonset/daemonset.yaml
+++ b/projects/gc-daemonset/daemonset.yaml
@@ -79,6 +79,78 @@ spec:
             sleep 600 &
             wait $!
           done
+        image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+        imagePullPolicy: Always
+        name: golang113
+        resources:
+          requests:
+            cpu: 50m
+      - command:
+        - /bin/bash
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+
+          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
+          while true; do
+            sleep 600 &
+            wait $!
+          done
+        image: registry.svc.ci.openshift.org/openshift/release:tectonic-console-builder-v17
+        imagePullPolicy: Always
+        name: consolebuilder17
+        resources:
+          requests:
+            cpu: 50m
+      - command:
+        - /bin/bash
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+
+          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
+          while true; do
+            sleep 600 &
+            wait $!
+          done
+        image: registry.svc.ci.openshift.org/openshift/release:tectonic-console-builder-v18
+        imagePullPolicy: Always
+        name: consolebuilder18
+        resources:
+          requests:
+            cpu: 50m
+      - command:
+        - /bin/bash
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+
+          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
+          while true; do
+            sleep 600 &
+            wait $!
+          done
+        image: registry.svc.ci.openshift.org/openshift/release:tectonic-console-builder-v19
+        imagePullPolicy: Always
+        name: consolebuilder19
+        resources:
+          requests:
+            cpu: 50m
+      - command:
+        - /bin/bash
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+
+          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
+          while true; do
+            sleep 600 &
+            wait $!
+          done
         image: registry.svc.ci.openshift.org/ocp/4.0:base
         imagePullPolicy: Always
         name: 40base
@@ -136,6 +208,25 @@ spec:
         image: registry.svc.ci.openshift.org/ocp/4.3:base
         imagePullPolicy: Always
         name: 43base
+        resources:
+          requests:
+            cpu: 50m
+      restartPolicy: Always
+      - command:
+        - /bin/bash
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+
+          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
+          while true; do
+            sleep 600 &
+            wait $!
+          done
+        image: registry.svc.ci.openshift.org/ocp/4.4:base
+        imagePullPolicy: Always
+        name: 44base
         resources:
           requests:
             cpu: 50m
