core-services: Remove the bugzilla requirement on the feature-prom-connector branch.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -705,6 +705,7 @@ tide:
     - release-4.6
     - openshift-4.1
     - feature-es6x
+    - feature-prom-connector
     labels:
     - lgtm
     - approved
@@ -904,6 +905,20 @@ tide:
     - openshift/cluster-logging-operator
     - openshift/elasticsearch-operator
     - openshift/origin-aggregated-logging
+  - includedBranches:
+    - feature-prom-connector
+    labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - bugzilla/invalid-bug
+    repos:
+    - operator-framework/operator-metering
   - labels:
     - lgtm
     - approved
